--- a/AzurePlayground/Views/Home/Index.cshtml
+++ b/AzurePlayground/Views/Home/Index.cshtml
@@ -7,6 +7,6 @@
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
     <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
     
-    <p>@ViewBag.Message here</p>
+    <p>@ViewBag.Message</p>
 </div>
 
